fix: button styling and registration card alignments

--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3vw 5vw;
+  padding: 3vw;
   gap: 1vw;
   position: relative;
   .about {
@@ -71,7 +71,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 530px) {
   .container {
     .about {
       .title {
