--- a/src/Components/Button/Button.module.scss
+++ b/src/Components/Button/Button.module.scss
@@ -27,12 +27,14 @@
   font-size: 1rem;
 }
 .small {
-  padding: 0.2rem 0.4rem;
+  padding: 0.7rem 0.9rem;
   font-size: 0.8rem;
+  margin-bottom: 3vw;
 }
 .large {
   padding: 1rem 2.5rem;
   font-size: 1.125rem;
+  margin: 0 1vw 1vw;
 }
 .primary {
   background: #0176fa;
@@ -42,11 +44,3 @@
 .primary:hover {
   background-color: #1765cc;
 }
-
-@media (max-width: 700px) {
-  .button {
-    padding: 0.725rem 2rem;
-    font-size: 0.875rem;
-  }
-}
-
