--- a/src/Components/Hero/Hero.module.scss
+++ b/src/Components/Hero/Hero.module.scss
@@ -4,7 +4,6 @@
   justify-content: center;
   padding: 3vw 0;
   gap: 3vw;
-  // overflow: hidden;
   position: relative;
   .left {
     padding: 1rem;
@@ -74,7 +73,7 @@
       }
     }
     .scrollbtn {
-      bottom: 9rem;
+      bottom: 12rem;
     }
     .btn {
       display: flex;
